fixed last button misalignment, need to recolor columns. replaced images with webp files. preformance score increased

--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -162,10 +162,9 @@ body.dark {
   border: 2px solid #0c3d86;
   margin-inline: 0px;
   display: block;
-  width: 200px !important;
+  width: 175px !important;
   justify-content: center;
-  margin-top: 10px;
-  
+  margin-top: 10px;  
 }
 .btnleft:hover {
   background-color: #ffffff; 
